--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=Laxita82
-DB_NAME=guest_house
-DB_PORT=3306
+DB_PASS=12345
+DB_NAME=guesthouse1
+JWT_SECRET=your_secret_key_here
